rewrite feedback and room-info

--- a/src/blocks/range-slider/range-slider.scss
+++ b/src/blocks/range-slider/range-slider.scss
@@ -34,7 +34,7 @@
   border: none;
 }
 
-.slider__range__title {
+.slider-range__title {
   padding-top: 25px;
   padding-bottom: 38px;
   font-size: 17.7px;
