--- a/src/components/info-room/info-room.pug
+++ b/src/components/info-room/info-room.pug
@@ -1,5 +1,5 @@
 include ../../blocks/room-information/room-information.pug
-include ../../blocks/feedback/feedback.pug
+include ../feedback/feedback.pug
 include ../../blocks/bullet-list/bullet-list.pug
 include ../../blocks/donut-chart/donut-chart.pug
 include ../../blocks/calculator/calculator.pug
