--- a/src/blocks/range-slider/range-slider.pug
+++ b/src/blocks/range-slider/range-slider.pug
@@ -1,3 +1,3 @@
 mixin range-slider(text)
-    .slider__range#slider-range 
-    .slider__range__title= text
+    .slider-range#slider-range 
+    .slider-range__title= text
