--- a/src/blocks/room-information/room-information.pug
+++ b/src/blocks/room-information/room-information.pug
@@ -1,7 +1,7 @@
 mixin room-information(icon, quality, descr, className)
-    div(class='room__information')
-      div(class='room__information__wrapper row' class= className)
+    div(class='roomin-formation')
+      div(class='room-information__wrapper row' class= className)
          i(class='material-icons')= icon
-         div(class='room__information__wrapper__description')
+         div(class='room-information__description')
             h4= quality
             p= descr
