--- a/src/components/form-register/form-register.scss
+++ b/src/components/form-register/form-register.scss
@@ -12,28 +12,28 @@
   padding: 33px 30px 40px 40px;
 }
 
-.signup-input--name {
+.signup__input_name {
   padding-top: 5px;
 }
 
-.signup-input--surname {
+.signup__input_surname {
   padding-top: 15px;
 }
 
-.signup-input--birthday {
+.signup__input_birthday {
   padding-top: 5px;
 }
 
-.signup-input--data {
+.signup__input_data {
   padding-top: 25px;
 }
 
-.signup-input--data--password {
+.signup__input_data_password {
   padding-top: 25px;
   padding-bottom: 25px;
 }
 
-.signup-button--payment {
+.signup__button_payment{
   margin-top: 25px;
   margin-bottom: 25px;
 }
