--- a/src/components/info-room/info-room.pug
+++ b/src/components/info-room/info-room.pug
@@ -29,9 +29,9 @@ div(class='information')
                     +chart-donut('260', 'голосов', 'Великолепно', 'Хорошо', 'Удовлетворительно', 'Разочарован')
             div
                 h3(class='information__title information__title_details') Отзывы посетителей номера
-                +feedback(require('./images/photo1.jpg'), 'Мурад Сарафанов', '5 дней назад', 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.')
+                +feedback(require('./images/photo1.jpg'), 'Мурад Сарафанов', '5 дней назад', 0, 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.')
                 div(class='information__impression_second')
-                    +feedback(require('./images/photo2.jpg'), 'Патрисия Стёклышкова', 'Неделю назад', 'Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент')
+                    +feedback(require('./images/photo2.jpg'), 'Патрисия Стёклышкова', 'Неделю назад', 12, 'Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент')
             div(class='flex-row')
                 div(class='information__rules')
                     h3(class='information__title information__title_rules') Правила
