--- a/src/components/signin-button/signin-button.pug
+++ b/src/components/signin-button/signin-button.pug
@@ -1,2 +1,2 @@
 mixin button-signin(name, link, className)
-  a(class='btn btn-link btn-link-menu', href= link, class= className)= name
+  a(class='btn btn__signin', href= link, class= className)= name
