--- a/src/components/signin-page/signin-page.pug
+++ b/src/components/signin-page/signin-page.pug
@@ -1,6 +1,7 @@
 include ../footer/footer.pug
 include ../signin-form/signin-form.pug
 include ../header/header.pug
+include ../button-signin-header/button-signin-header.pug
 doctype html
 html
   head
@@ -14,4 +15,5 @@ html
     .clear
     .main-background
       +form-signin('Войти', 'Нет аккаунта на Toxin?')
-    +footer({name1: 'навигация', name2: 'о нас', name3: 'Служба поддержки', name4: 'Подписка'}, ['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'], 'Copyright © 2018 Toxin отель. Все права зачищены.')
+    +footer('Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»', {name1: 'навигация', name2: 'о нас', name3: 'Служба поддержки', name4: 'Подписка'}, ['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'], 
+    'Получайте специальные предложения и новости сервиса', 'Copyright © 2018 Toxin отель. Все права зачищены.')
