--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -40,7 +40,10 @@ p {
   background-repeat: no-repeat;
   width: 210px;
   height: 60px;
-  margin-top: 5px;
+  vertical-align: middle;
+  margin-top: 25px;
+  display: inline-block;
+  
 }
 
 .title-main {
