--- a/src/blocks/calculator/calculator.pug
+++ b/src/blocks/calculator/calculator.pug
@@ -17,7 +17,7 @@ mixin calculator(roomNumber, pricePerDay, day, checkin, checkout, titleDropdown,
             .calculator__dropdown
                 +dropdown( {id: 'dd-text', name: 'Сколько гостей'}, { name:'Взрослые', number: 'adult_text', plus: 'adult_plus', minus: 'adult_minus'},  {name: 'Дети', number: 'child_text', plus: 'child_plus', minus: 'child_minus' }, {name: 'Младенцы', number: 'baby_text', plus: 'baby_plus', minus: 'baby_minus'})
             .flex-row.calculator__count
-                .count__price
+                .flex-row.count__price
                     p= calculationOfThePrice
                     p= fullPrice
             .flex-row.calculator__count
