--- a/src/blocks/room-information/room-information.scss
+++ b/src/blocks/room-information/room-information.scss
@@ -1,3 +1,35 @@
 .room_information__wrapper {
   padding: 25px 10px 25px 0px;
 }
+
+
+.information__info{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.information__info .material-icons {
+  font-family: "MaterialIcons";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 3.83rem;
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+  color: #9ba1fb;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: "liga";
+}
