--- a/src/components/filter-page/filter-page.pug
+++ b/src/components/filter-page/filter-page.pug
@@ -1,5 +1,6 @@
 //- include ../../components/header/header.pug
 include ../footer/footer.pug
+include ../button-signin-header/button-signin-header.pug
 include ../header/header.pug
 doctype html
 html
@@ -12,7 +13,8 @@ html
       .header-btn-signup
         +button-signup('Зарегистрироватьcя', 'signup-page.html')
     include ../room-page/room-page.pug
-    +footer({name1: 'навигация', name2: 'о нас', name3: 'Служба поддержки', name4: 'Подписка'}, ['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'], 'Copyright © 2018 Toxin отель. Все права зачищены.')
+    +footer('Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»', {name1: 'навигация', name2: 'о нас', name3: 'Служба поддержки', name4: 'Подписка'}, ['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'], 
+    'Получайте специальные предложения и новости сервиса', 'Copyright © 2018 Toxin отель. Все права зачищены.')
 
 
 
