--- a/src/components/form-search/form-search.pug
+++ b/src/components/form-search/form-search.pug
@@ -2,7 +2,7 @@ include ../mixins.pug
 include ../../blocks/dropdown/dropdown.pug
 include ../../blocks/airdatepicker/airdatepicker.pug
 
-mixin form-search(title, subtitle)
+mixin form-search(subtitle, text)
   .form-search
       .form-search__container
         h1(class='title-main form-search__title' style='white-space:pre;')
@@ -15,9 +15,7 @@ mixin form-search(title, subtitle)
           +datepicker()
         h3(class='title')= subtitle.guests
         div(class='form-search__dropdown')
-          //- include ../../blocks/dropdown/dropdown.pug
           +dropdown( {id: 'dd-text', name: 'Сколько гостей'}, { name:'Взрослые', number: 'adult_text', plus: 'adult_plus', minus: 'adult_minus'},  {name: 'Дети', number: 'child_text', plus: 'child_plus', minus: 'child_minus' }, {name: 'Младенцы', number: 'baby_text', plus: 'baby_plus', minus: 'baby_minus'})
         div(class='form-search__button_confirm')  
           a(href='filter-page.html')
-            button(type='button' class='btn  btn-confirm') подобрать номер
-            //-  +dropdown( {id: 'dd-text', name: 'Сколько гостей'}, { name:'Взрослые', number: 'adult_text', plus: 'adult_plus', minus: 'adult_minus'},  {name: 'Дети', number: 'child_text', plus: 'child_plus', minus: 'child_minus' }, {name: 'Младенцы', number: 'baby_text', plus: 'baby_plus', minus: 'baby_minus'})
+            button(type='button' class='btn  btn-confirm')= text
