--- a/src/components/info-page/info-page.pug
+++ b/src/components/info-page/info-page.pug
@@ -1,4 +1,5 @@
 include ../header/header.pug
+include ../button-signin-header/button-signin-header.pug
 include ../footer/footer.pug
 doctype html
 html
@@ -14,4 +15,5 @@ html
     .clear
     br
     include ../info-room/info-room.pug
-    +footer({name1: 'навигация', name2: 'о нас', name3: 'Служба поддержки', name4: 'Подписка'}, ['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'], 'Copyright © 2018 Toxin отель. Все права зачищены.')
+    +footer('Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»', {name1: 'навигация', name2: 'о нас', name3: 'Служба поддержки', name4: 'Подписка'}, ['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'], 
+    'Получайте специальные предложения и новости сервиса', 'Copyright © 2018 Toxin отель. Все права зачищены.')
