--- a/src/components/room-page/room-page.pug
+++ b/src/components/room-page/room-page.pug
@@ -8,7 +8,7 @@ include ../../blocks/pagination/pagination.pug
 include ../../blocks/expandable-checkbox-list/expandable-checkbox-list.pug
 include ../../blocks/little-dropdown/little-dropdown.pug
 .container.settings
-        #left-side.left-side
+        .left-side
             div(class='sidebar' id='sidebar')
                 a(href='#' class='close')
                     i(class='fa fa-arrow-left')
@@ -28,16 +28,26 @@ include ../../blocks/little-dropdown/little-dropdown.pug
                     +checkbox('Smoking', 'Можно курить', 'room__checkbox')
                     +checkbox('Pets', 'Можно с питомцами', 'room__checkbox')
                     +checkbox('Guests',  'Можно пригласить гостей (до 10 человек)')
-                //- 'room__checkbox')
                 h3(class='title settings__title_availability') Доступность 
                 .blocks
                     +description-checkbox('Широкий коридор', 'Широкий коридор', 'Ширина коридоров в номере не менее 91 см.')
                     +description-checkbox('Помощник для инвалидов', 'Помощник для инвалидов', 'На 1 этаже вас встретит специалист  и проводит до номера.')
-                h3(class='title  settings__title_comfort') Удобства номера
+                h3(class='title settings__title_comfort') Удобства номера
+                +little-dropdown( {id: 'comfort-button', name: 'Удобства'}, { name:'спальни', number: 'bedroom_text', plus: 'bedroom_plus', minus: 'bedroom_minus'},  {name: 'кровати', number: 'bed_text', plus: 'bed_plus', minus: 'bed_minus' }, {name: 'ванные', number: 'bathroom_text', plus: 'bathroom_plus', minus: 'bathroom_minus'}, {id:'comfort-clean', title: 'очистить'}, {id:'comfort-apply', title: 'применить'})
                 div(class='settings-comfort')
-                    include ../../blocks/comfort-dropdown/comfort-dropdown.pug
                 div(class='settings__extracomfort')
-                    +expandable-checkbox-list('Дополнительные удобства', ['Breakfast', 'Завтрак', 'Table', 'Письменный стол'])
+                    +expandable-checkbox-list('Дополнительные удобства')
+                        ul(class='extracomfort__menu')
+                            li(class='extracomfort__checkbox')
+                                +checkbox('Breakfast', 'Завтрак')
+                            li(class='extracomfort__checkbox')
+                                +checkbox('Table', 'Письменный стол')
+                            li(class='extracomfort__checkbox')
+                                +checkbox('Chair', 'Стул для кормления')
+                            li(class='extracomfort__checkbox')
+                                +checkbox('Bed', 'Кроватка')
+                            li(class='extracomfort__checkbox')
+                                +checkbox('Shampoo', 'Шампунь')
         .right-side
             h1(class='title-main settings__title-main') Номера, которые мы для вас подобрали
             span(class='slide' id='slide')
