--- a/src/components/search-page/search-page.pug
+++ b/src/components/search-page/search-page.pug
@@ -1,10 +1,11 @@
 include ../header/header.pug
 include ../form-search/form-search.pug
+include ../button-signin-header/button-signin-header.pug
 include ../footer/footer.pug
 doctype html
 html
   head
-    title my jade template
+    title
   body
     +header(['О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения'])
       +button-signin-header('Войти', 'signin-page.html', 'header-btn-signin' )
@@ -12,8 +13,9 @@ html
         +button-signup('Зарегистрироватьcя', 'signup-page.html')
     .clear
     .main-background-search
-      +form-search('Найдём номера',  'под ваши пожелания', {checkin: 'Прибытие', checkout: 'Выезд', guests: 'Гости'})
+      +form-search({checkin: 'Прибытие', checkout: 'Выезд', guests: 'Гости'}, 'подобрать номер')
       p(class='slogan' style='white-space:pre;') 
         |Лучшие номера для вашей работы, 
         |  отдыха и просто вдохновения
-    +footer({name1: 'навигация', name2: 'о нас', name3: 'Служба поддержки', name4: 'Подписка'}, ['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'], 'Copyright © 2018 Toxin отель. Все права зачищены.')
+    +footer('Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»', {name1: 'навигация', name2: 'о нас', name3: 'Служба поддержки', name4: 'Подписка'}, ['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'], 
+    'Получайте специальные предложения и новости сервиса', 'Copyright © 2018 Toxin отель. Все права зачищены.')
