--- a/src/blocks/single-airdatepicker/single-airdatepicker.pug
+++ b/src/blocks/single-airdatepicker/single-airdatepicker.pug
@@ -1,6 +1,7 @@
-div.single-arrow-wrapper
-    input(type='text'
-        data-range='true'
-        data-multiple-dates-separator=' - '
-        placeholder='ДД.ММ.ГГГГ'
-        id ='single__input__range')
+mixin single-datepicker()
+    div.single-datepicker
+        input(type='text'
+            data-range='true'
+            data-multiple-dates-separator=' - '
+            placeholder='ДД.ММ.ГГГГ'
+            id ='single__input__range')
