--- a/src/blocks/toggle/toggle.pug
+++ b/src/blocks/toggle/toggle.pug
@@ -1,2 +1,3 @@
-input#cb1.tgl.tgl-light(type ='checkbox') 
-label.tgl-btn(for = 'cb1')
+mixin toggle()
+    input#cb1.tgl.tgl_light(type ='checkbox') 
+    label.tgl__btn(for = 'cb1')
