--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -61,7 +61,7 @@
   margin-top: 13px;
 }
 
-.header-btn-signup {
+.header__btn_signup {
   display: inline-block;
 }
 @media (max-width: 1300px) {
@@ -125,7 +125,7 @@
     margin: 10px 25px 16px 0px;
   }
 
-  .header-btn-signup {
+  .header__btn_signup {
     margin-top: 10px;
   }
 }
