--- a/src/blocks/toggle/toggle.scss
+++ b/src/blocks/toggle/toggle.scss
@@ -6,21 +6,20 @@
   & *,
   & *:after,
   & *:before,
-  & + .tgl-btn {
+  & + .tgl__btn {
     box-sizing: border-box;
     &::selection {
       background: none;
     }
   }
 
-  + .tgl-btn {
+  + .tgl__btn {
     width: 56px;
     height: 28px;
     background: #ffffff;
     border: 1px solid rgba(31, 32, 65, 0.25);
     box-sizing: border-box;
     border-radius: 10px;
-
     outline: 0;
     display: block;
     cursor: pointer;
@@ -45,14 +44,13 @@
     }
   }
 
-  &:checked + .tgl-btn:after {
+  &:checked + .tgl__btn:after {
     left: 60%;
   }
 }
 
-// themes
-.tgl-light {
-  + .tgl-btn {
+.tgl_light {
+  + .tgl__btn {
     background: #fff;
     border-radius: 2em;
     padding: 2px;
@@ -64,10 +62,10 @@
     }
   }
 
-  &:checked + .tgl-btn {
+  &:checked + .tgl__btn {
     border: 1px solid #bc9cff;
   }
-  &:checked + .tgl-btn:after {
+  &:checked + .tgl__btn:after {
     border-radius: 50%;
     background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
     transition: all 0.2s ease;
