--- a/src/components/info-room/info-room.pug
+++ b/src/components/info-room/info-room.pug
@@ -44,4 +44,4 @@ div(class='information')
                         | прибытия вы получите полный возврат за 
                         | вычетом сбора за услуги.
         div(class='information__bottom-part bottom-part__right')
-            +calculator(888, '9 990₽', 'в сутки', 'прибытие', 'выезд', 'гости', '9 990₽ х 4 суток', '39 960₽', 'Сбор за услуги: скидка 2 179₽', 'Сбор за дополнительные услуги','300₽', 'Итого..................................................38 081₽')
+            +calculator(888, '9 990₽', 'в сутки', 'прибытие', 'выезд', 'гости', '9 990₽ х 4 суток', '39 960₽', 'Сбор за услуги: скидка 2 179₽', 'Сбор за дополнительные услуги','300₽', 'Итого..................................................38 081₽', 'Забронировать')
