--- a/src/components/signin-form/signin-form.pug
+++ b/src/components/signin-form/signin-form.pug
@@ -11,7 +11,7 @@ mixin form-signin(title, login)
           div(class='input-signin input-signin--second')
             +input-text('Пароль')
 
-          button(type='button' class='btn  btn-confirm btn-signin') Войти
+          button(type='button' class='btn  btn-confirm btn-signin')= title
           
           .flex-row
             div(class='text text-signin')= login
