--- a/src/components/signup-page/signup-page.pug
+++ b/src/components/signup-page/signup-page.pug
@@ -14,6 +14,6 @@ html
         +button-signup('Зарегистрироватьcя', 'signup-page.html')
     .clear
     .sugnup-background
-      +form-register( 'Регистрация аккаунта',  'дата рождения', 'данные для входа в сервис', 'Получать спецпредложения', 'Уже есть аккаунт на Toxin')
+      +form-register( 'Регистрация аккаунта',  'дата рождения', 'данные для входа в сервис', 'Получать спецпредложения', 'перейти к оплате', 'Уже есть аккаунт на Toxin')
     +footer('Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»', {name1: 'навигация', name2: 'о нас', name3: 'Служба поддержки', name4: 'Подписка'}, ['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'], 
     'Получайте специальные предложения и новости сервиса', 'Copyright © 2018 Toxin отель. Все права зачищены.')
