--- a/src/components/filter-page/filter-page.pug
+++ b/src/components/filter-page/filter-page.pug
@@ -9,7 +9,7 @@ html
   body
     +header(['О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения'])
       +button-signin-header('Войти', 'signin-page.html', 'header-btn-signin' )
-      .header-btn-signup
+      .header__btn_signup
         +button-signup('Зарегистрироватьcя', 'signup-page.html')
     include ../room-page/room-page.pug
     +footer('Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»', {name1: 'навигация', name2: 'о нас', name3: 'Служба поддержки', name4: 'Подписка'}, ['О нас', 'Новости', 'Служба поддержки', 'Услуги'], ['О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы'], ['Соглашения', 'Сообщества', 'Связь с нами'], 
