change flex styles for header

--- a/src/blocks/pagination/pagination.scss
+++ b/src/blocks/pagination/pagination.scss
@@ -138,6 +138,12 @@
   }
 }
 
+.panagination-subtitle{
+  text-align: center;
+  color: rgba(31, 32, 65, 0.75);
+  font-size: 20px;
+}
+
 @media only screen and (max-width: 1000px) {
   .cdp_i {
     height: 40px;
