--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -97,6 +97,8 @@
     padding-bottom: 30px;
     &__nav {
       padding: 0 0px 10px;
+    }
+    .nav{
       &__column{
         margin: 0 0px 10px;
         text-decoration: none;
