--- a/src/components/room-page/room-page.scss
+++ b/src/components/room-page/room-page.scss
@@ -93,8 +93,8 @@ div.room-card__decor {
   margin-top: 15px;
 }
 
-.panagination-subtitle{
-  text-align: center;
+.settings__pagination{
+  margin-bottom: 100px;
 }
 
 @media only screen and (max-width: 1600px) {
