--- a/src/pages/search-page/search-page.scss
+++ b/src/pages/search-page/search-page.scss
@@ -18,6 +18,7 @@
   left: 70%;
   margin-top: 50vh;
   padding-bottom: 3vh;
+  color: rgba(31, 32, 65, 0.75);
 }
 
 @media only screen and (max-width: 900px) {
