--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -74,8 +74,7 @@ a {
 }
 
 hr {
-  background: rgba(31, 32, 65, 0.1);
-  height: 1.5px;
+  border: 1px solid rgba(31, 32, 65, 0.25);
 }
 
 .btn-confirm {
